--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 :root {
     --bg-color: #fdfdfd;
     --text-color: #333;
-    --main-color: #754ef9;
+    --main-color: #d0ad4e;
     --white-color: #fdfdfd;
     --shadow-color: rgba(0, 0, 0, .2);
 }
